<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="450dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="#1caf99"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/x"
        android:gravity="end"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textStyle="bold"
        android:textColor="@color/colorDark"
        android:id="@+id/txtClose"
        />

    <Spinner
        android:id="@+id/productSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:background="@android:drawable/btn_dropdown"
        android:backgroundTint="#21ceb4"
        android:padding="5dp"

        android:spinnerMode="dropdown" />

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/ekin_zaman"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/colorDark"
        android:backgroundTint="#21ceb4"
        android:layout_marginTop="10dp"
        android:id="@+id/CropDate"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/addText"
        android:hint="@string/note_ekle"

        android:background="#7abebb"
        android:padding="8dp"
        android:gravity="start"
        android:textStyle="normal"
        android:textSize="20sp"
        />

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/urunu_ekle"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:backgroundTint="#21ceb4"
        android:id="@+id/addProduct"
        />

</LinearLayout>