<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/textView1"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/kullaniciSil"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/delete_user"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:background="@android:color/holo_blue_bright"/>
    <Button
        android:id="@+id/cikis_yap"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/logout"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:background="@color/colorAccent"/>

    <Button
        android:id="@+id/homeFarm"
        style="?android:textColorAlertDialogListItem"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:shadowColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:layout_gravity="center"

        android:layout_margin="50dp"
        android:layout_marginStart="250dp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:text="@string/go_farm"
        android:background = "@android:color/holo_green_dark"/>

</LinearLayout>