<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".activity_chart_pie_total">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        android:text="@string/dummy_content_pie"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp"
        android:textStyle="bold"
        android:gravity="center|bottom"
        android:background="@color/colorPrimaryDarkTransparent"/>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="140dp">

            <com.github.mikephil.charting.charts.HorizontalBarChart
                android:id="@+id/skill_rating_chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </LinearLayout>



        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/dummy_button_back_total"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:shadowColor="@color/black_overlay"
                android:text="@string/geri_git" />

            <Button
                android:id="@+id/dummy_button_total_total"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:shadowColor="@color/black_overlay"
                android:text="@string/dummy_button_pie" />
        </LinearLayout>
    </FrameLayout>

</FrameLayout>